# desafio_Python_DIO_04

./: .gitignore  README.md  alembic.ini  pyproject.toml
desafio_python_dio_04/: app.py
migrations/: env.py
migrations/versions/: 7a8779e1b9cc_2.py  d6e2101fdfe3_primeira_migração.py  e4e32fa850a0_3.py
models/: athlete.py  category.py  trainning_center.py
schemas/: BaseShema.py  OutMixin.py  athlete.py  category.py  training_center.py
workout_DIO/: app.py  routers.py
workout_DIO/config/: database.py  settings.py
workout_DIO/contrib/repository/: models.py
workout_DIO/controllers/: athlete_controller.py  category_controller.py  trainning_center_controller.py
workout_DIO/helpers/: custom_pagination.py
workout_DIO/models/: athlete.py  base_model.py  category.py  trainning_center.py
workout_DIO/schemas/: OutMixin.py  athlete.py  category.py  training_center.py
